# MOSS-TTS-Nano-Reader

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  README_zh.md  docker-compose.yml  environment.yml
assets/: voice_browser_metadata.json
extension/: background.js  browser_onnx_host.html  browser_onnx_host.js  browser_onnx_runtime.js  browser_poc.css  browser_poc.html  browser_poc_bundle.js  content.js  manifest.json  popup.css  popup.html  popup.js  tokenizer_sandbox.js
reader-app/: README.md  main.py
server/: pyproject.toml  server.py
