[project]
name = "pocket-reader-server"
version = "1.0.0"
description = "Local TTS server for Nano Reader Chrome extension using Nano-TTS"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "numpy>=1.24.0",
    "sentencepiece>=0.1.99",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "transformers==4.57.1",
    "soundfile",
]
